--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.12MB/s(Youtube:不良林), server: 85.208.108.58, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-311.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-346.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-455.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-301.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-823.7KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-440.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-823.7KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-301.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-532.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-373.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-734.5KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-337.0KB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65041, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-314.3KB/s(Youtube:不良林), server: node-us-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-us-c-01.texo.network, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-532.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-373.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-734.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-337.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-314.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-532.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-373.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-734.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-337.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-314.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-532.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-373.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-734.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-337.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-314.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-532.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-373.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-734.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-337.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-314.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-532.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-373.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-734.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-337.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-314.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-532.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-373.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-734.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-337.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-314.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-532.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-373.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-734.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-337.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-314.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
