--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-426.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-390.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-498.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.09MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-162.8KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-390.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-214.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.42MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-356.2KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-771.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.71MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇸🇬 新加坡-1.30MB/s(Youtube:不良林), server: node-tw-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-tw-c-01.texo.network, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-426.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-498.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-390.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-214.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-771.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-426.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-498.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-390.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-214.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-771.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-426.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-498.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-390.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-214.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-771.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-426.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-498.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-390.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-214.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-771.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-426.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-498.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-390.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-214.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-771.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-426.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-498.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-390.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-214.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-771.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-426.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-498.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-390.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-214.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-771.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
