--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-409.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-214.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-374.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-443.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-358.7KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65089, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-174.7KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65089, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-321.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-846.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-469.4KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-309.2KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-320.9KB/s(Youtube:不良林), server: 120.233.29.189, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
-  - {name: 🇨🇳 中国-374.6KB/s(Youtube:不良林), server: 36.134.156.5, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-330.8KB/s(Youtube:不良林), server: 120.233.150.146, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-340.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-418.4KB/s(Youtube:不良林), server: 36.134.156.5, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-360.0KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-906.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.70MB/s(Youtube:不良林), server: 211.23.149.95, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.53MB/s(Youtube:不良林), server: node-tw-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-tw-c-01.texo.network, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-409.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-214.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-321.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-846.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-469.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-906.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-409.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-214.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-321.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-846.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-469.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-906.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-409.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-214.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-321.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-846.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-469.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-906.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-409.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-214.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-321.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-846.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-469.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-906.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-409.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-214.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-321.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-846.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-469.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-906.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-409.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-214.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-321.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-846.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-469.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-906.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-409.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-214.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-321.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-846.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-469.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-906.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
